--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ dist-ssr
 
 # Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Test reports
+test-report.html
+test-report-screenshot.png
