--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "logs": "json-server --watch db.json --port 3001",
+    "start": "./start-dev.sh"
   },
   "dependencies": {
     "axios": "^1.6.7",
@@ -33,6 +35,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-html-reporter": "^3.10.2",
+    "json-server": "^1.0.0-alpha.23",
     "postcss": "^8.4.35",
     "puppeteer": "^23.5.3",
     "tailwindcss": "^3.4.1",
