--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "vite",
+    "dev:backend": "cd server && ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "npm run build:frontend && npm run build:backend",
+    "build:frontend": "tsc && vite build",
+    "build:backend": "cd server && tsc",
+    "start": "node server/dist/index.js",
     "lint": "eslint . --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest",
-    "logs": "json-server --watch db.json --port 3001",
-    "start": "./start-dev.sh"
+    "logs": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "axios": "^1.6.7",
     "ci-info": "^2.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "express-rate-limit": "^7.2.0",
+    "helmet": "^7.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -27,6 +36,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.9.3",
     "@types/react": "^18.2.64",
@@ -36,6 +47,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "babel-jest": "^29.7.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
@@ -47,6 +59,7 @@
     "puppeteer": "^23.5.3",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
   }
