--- a/server/package.json
+++ b/server/package.json
@@ -1,29 +1,33 @@
 {
-  "name": "debate-game-server",
+  "name": "debater-server",
   "version": "1.0.0",
-  "description": "Backend server for the Debate Game",
+  "description": "Debate application server",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "init-logs": "chmod +x scripts/init-logs.sh && ./scripts/init-logs.sh",
     "build": "tsc",
+    "start": "npm run init-logs && node dist/index.js",
+    "dev": "npm run init-logs && ts-node-dev --respawn --transpile-only src/index.ts",
+    "clean-logs": "rm -f logs/diagnostic.log",
+    "view-logs": "tail -f logs/diagnostic.log",
     "test": "jest"
   },
   "dependencies": {
-    "@types/uuid": "^10.0.0",
-    "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "express-rate-limit": "^7.2.0",
-    "helmet": "^7.1.0",
-    "uuid": "^11.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.9.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/uuid": "^9.0.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.0.4"
   }
 }
