--- a/models.config.json
+++ b/models.config.json
@@ -6,12 +6,12 @@
       "fallback": "microsoft/wizardlm-2-7b"
     },
     "hint": {
-      "name": "openai/gpt-4o-mini",
+      "name": "openai/gpt-4o-2024-11-20",
       "description": "Used for generating helpful debate hints and suggestions",
       "fallback": "microsoft/wizardlm-2-7b"
     },
     "turnScoring": {
-      "name": "anthropic/claude-3.5-sonnet",
+      "name": "openai/gpt-4o-2024-11-20",
       "description": "Evaluates individual debate turns and provides quick feedback",
       "fallback": "microsoft/wizardlm-2-7b"
     },
