--- a/server/package.json
+++ b/server/package.json
@@ -24,8 +24,10 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.1",
     "jest": "^29.5.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
