--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
-    "dev:frontend": "vite",
+    "dev:frontend": "vite --host",
     "dev:backend": "cd server && ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "npm run build:frontend && npm run build:backend",
     "build:frontend": "tsc && vite build",
