--- a/models.config.json
+++ b/models.config.json
@@ -3,22 +3,22 @@
     "opponent": {
       "name": "google/gemini-flash-1.5",
       "description": "Primary model for generating debate responses and arguments",
-      "fallback": "microsoft/wizardlm-2-7b"
+      "fallback": "google/gemini-flash-1.5"
     },
     "hint": {
-      "name": "openai/gpt-4o-2024-11-20",
+      "name": "openai/gpt-4o-mini",
       "description": "Used for generating helpful debate hints and suggestions",
-      "fallback": "microsoft/wizardlm-2-7b"
+      "fallback": "openai/gpt-4o-mini"
     },
     "turnScoring": {
       "name": "google/gemini-flash-1.5",
       "description": "Evaluates individual debate turns and provides quick feedback",
-      "fallback": "microsoft/wizardlm-2-7b"
+      "fallback": "google/gemini-flash-1.5"
     },
     "finalScoring": {
       "name": "openai/gpt-4o-mini",
       "description": "Provides comprehensive final debate evaluation",
-      "fallback": "microsoft/wizardlm-2-7b"
+      "fallback": "openai/gpt-4o-mini"
     }
   }
 }
