--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "helmet": "^7.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
